fix: fixed width for notification

--- a/lib/components/Badge/badge.scss
+++ b/lib/components/Badge/badge.scss
@@ -85,14 +85,17 @@
             &--size {
                 &-sm {
                     padding-inline: var(--component-badge-notification-spacing-padding-sm);
+                    min-width: var(--core-spacing-900);
                }
 
                 &-md {
                     padding-inline: var(--component-badge-notification-spacing-padding-md);
+                    min-width: var(--core-spacing-1200);
                   }
 
                 &-lg {
                     padding-inline: var(--component-badge-notification-spacing-padding-lg);
+                    
                      }
             }
         }
