fix: storybook added

--- a/.storybook/styles.scss
+++ b/.storybook/styles.scss
@@ -2,3 +2,8 @@ body,
 .docs-story {
     background-color: var(--semantic-color-slate-solid-surface-frame-mid);
 }
+
+.wrapperClass {
+    width: 640px;
+    height: 200px;
+}
