--- a/lib/components/Input/textarea/textarea.scss
+++ b/lib/components/Input/textarea/textarea.scss
@@ -49,7 +49,6 @@
     &__wrapper {
         border-radius: var(--semantic-borderRadius-md);
         overflow: hidden;
-        min-height: 128px;
         position: relative;
         box-sizing: border-box;
 
@@ -64,81 +63,109 @@
 
         &__variant {
             &--outline {
-                background-color: var(--core-color-solid-slate-50);
-                border: var(--borderWidth-xs) solid
-                    var(--core-color-opacity-black-100);
+                background-color: var(--component-field-bg-outline-default);
+                border: var(--component-field-border-width) solid
+                    var(--component-field-border-color-default);
 
                 &:has(textarea:disabled) {
-                    border-color: var(--core-color-opacity-black-100);
+                    border-color: var(--component-field-border-color-default);
                 }
 
                 &--neutral {
                     &:hover {
-                        border-color: var(--core-color-opacity-black-200);
+                        border-color: var(--component-field-border-color-hover);
                     }
                     &:has(textarea:focus) {
-                        border-color: var(--core-color-solid-slate-1400);
+                        border-color: var(--component-field-border-color-focus);
                     }
                 }
 
                 &--success {
-                    border-color: var(--core-color-opacity-green-600);
+                    border-color: var(
+                        --component-field-border-color-successDefault
+                    );
                     &:hover {
-                        border-color: var(--core-color-opacity-green-800);
+                        border-color: var(
+                            --component-field-border-color-successHover
+                        );
                     }
                     &:has(textarea:focus) {
-                        border-color: var(--core-color-solid-green-900);
+                        border-color: var(
+                            --component-field-border-color-successFocus
+                        );
                     }
                 }
 
                 &--error {
-                    border-color: var(--core-color-opacity-red-600);
+                    border-color: var(
+                        --component-field-border-color-failDefault
+                    );
                     &:hover {
-                        border-color: var(--core-color-opacity-red-800);
+                        border-color: var(
+                            --component-field-border-color-failHover
+                        );
                     }
                     &:has(textarea:focus) {
-                        border-color: var(--core-color-solid-red-900);
+                        border-color: var(
+                            --component-field-border-color-failFocus
+                        );
                     }
                 }
             }
 
             &--fill {
-                border: var(--borderWidth-xs) solid transparent;
+                border: var(--component-field-border-width) solid transparent;
 
                 &:has(textarea:disabled) {
-                    background-color: var(--core-color-opacity-black-75);
+                    background-color: var(--component-field-bg-fill-default);
                 }
 
                 &--neutral {
-                    background-color: var(--core-color-opacity-black-75);
+                    background-color: var(--component-field-bg-fill-default);
                     &:hover {
-                        background-color: var(--core-color-opacity-black-100);
+                        background-color: var(--component-field-bg-fill-hover);
                     }
                     &:has(textarea:focus) {
-                        background-color: var(--core-color-opacity-black-75);
-                        border-color: var(--core-color-solid-slate-1400);
+                        background-color: var(--component-field-bg-fill-focus);
+                        border-color: var(--component-field-border-color-focus);
                     }
                 }
 
                 &--success {
-                    background-color: var(--core-color-opacity-green-100);
+                    background-color: var(
+                        --component-field-bg-fill-successDefault
+                    );
                     &:hover {
-                        background-color: var(--core-color-opacity-green-200);
+                        background-color: var(
+                            --component-field-bg-fill-successHover
+                        );
                     }
                     &:has(textarea:focus) {
-                        background-color: var(--core-color-opacity-green-100);
-                        border-color: var(--core-color-solid-green-900);
+                        background-color: var(
+                            --component-field-bg-fill-successFocus
+                        );
+                        border-color: var(
+                            --component-field-border-color-successFocus
+                        );
                     }
                 }
 
                 &--error {
-                    background-color: var(--core-color-opacity-red-100);
+                    background-color: var(
+                        --component-field-bg-fill-failDefault
+                    );
                     &:hover {
-                        background-color: var(--core-color-opacity-red-200);
+                        background-color: var(
+                            --component-field-bg-fill-failHover
+                        );
                     }
                     &:has(textarea:focus) {
-                        background-color: var(--core-color-opacity-red-100);
-                        border-color: var(--core-color-solid-red-900);
+                        background-color: var(
+                            --component-field-bg-fill-failFocus
+                        );
+                        border-color: var(
+                            --component-field-border-color-failFocus
+                        );
                     }
                 }
             }
@@ -147,9 +174,14 @@
         &__size {
             &--md {
                 padding-inline: var(--core-spacing-2400);
+                &.no-left-icon {
+                    padding-left: var(--core-spacing-800);
+                }
+                &.no-right-icon {
+                    padding-right: var(--core-spacing-800);
+                }
                 padding-top: var(--core-spacing-800);
                 .quill-textarea {
-                    min-height: 110px;
                     font-size: var(
                         --semantic-typography-body-md-regular-default-fontSize
                     );
@@ -160,22 +192,27 @@
 
                 .left-icon,
                 .right-icon {
-                    top: 16px;
+                    top: var(--core-size-800);
                 }
                 .left-icon {
-                    left: 16px;
+                    left: var(--core-size-800);
                 }
                 .right-icon {
-                    right: 10px;
+                    right: var(--core-size-500);
                 }
             }
             &--sm {
                 padding-inline: var(--core-spacing-2000);
+                &.no-left-icon {
+                    padding-left: var(--core-spacing-400);
+                }
+                &.no-right-icon {
+                    padding-right: var(--core-spacing-400);
+                }
                 padding-top: var(--core-spacing-200);
 
                 .quill-textarea {
-                    min-height: 98px;
-                    padding-top: 4px;
+                    padding-top: var(--core-spacing-200);
                     font-size: var(
                         --semantic-typography-body-sm-regular-default-fontSize
                     );
@@ -186,13 +223,13 @@
 
                 .left-icon,
                 .right-icon {
-                    top: 8px;
+                    top: var(--core-spacing-400);
                 }
                 .left-icon {
-                    left: 4px;
+                    left: var(--core-spacing-200);
                 }
                 .right-icon {
-                    right: 4px;
+                    right: var(--core-spacing-200);
                 }
             }
         }
@@ -221,14 +258,14 @@
                 }
                 &:focus,
                 &.has-value {
-                    margin-top: 8px;
+                    margin-top: var(--core-spacing-400);
                     &::placeholder {
                         color: var(--component-field-label-color-disabled);
                     }
                 }
             }
             &.has-value + .label {
-                top: 6px;
+                top: var(--core-spacing-300);
                 font-size: var(--core-fontSize-50);
                 line-height: var(--core-lineHeight-100);
             }
@@ -240,7 +277,7 @@
                 &--neutral {
                     color: var(--component-field-label-color-focus);
                 }
-                top: 6px;
+                top: var(--core-spacing-300);
 
                 &-field-marker {
                     font-size: var(
@@ -276,7 +313,7 @@
         .label {
             position: absolute;
             top: var(--core-spacing-800);
-            padding-top: 2px;
+            padding-top: var(--core-spacing-100);
             transition-property: all;
             transition-timing-function: var(--core-motion-ease-400);
             transition-duration: var(--core-motion-duration-200);
