--- a/lib/components/Input/textarea/textarea.scss
+++ b/lib/components/Input/textarea/textarea.scss
@@ -173,6 +173,7 @@
 
         &__size {
             &--md {
+                min-height: 128px;
                 padding-inline: var(--core-spacing-2400);
                 &.no-left-icon {
                     padding-left: var(--core-spacing-800);
@@ -202,6 +203,7 @@
                 }
             }
             &--sm {
+                min-height: 104px;
                 padding-inline: var(--core-spacing-2000);
                 &.no-left-icon {
                     padding-left: var(--core-spacing-400);
@@ -237,6 +239,7 @@
         .quill-textarea {
             width: 100%;
             height: 100%;
+            max-height: 90%;
             border: none;
             outline: none;
             resize: none;
@@ -350,5 +353,31 @@
         bottom: 0;
         right: 0;
         cursor: se-resize;
+    }
+}
+
+.quill-textarea::-webkit-scrollbar {
+    scrollbar-width: thin;
+    width: 4px;
+    // height: 4px;
+    background-color: transparent;
+    border-radius: 10px;
+}
+
+.quill-textarea::-webkit-scrollbar-track {
+    scrollbar-width: thin;
+    background-color: transparent;
+}
+
+.quill-textarea::-webkit-scrollbar-thumb {
+    display: none;
+}
+
+.quill-textarea:hover {
+    &::-webkit-scrollbar-thumb {
+        scrollbar-width: thin;
+        display: unset;
+        border-radius: 10px;
+        background-color: rgba(0, 0, 0, 0.08);
     }
 }
