--- a/lib/components/Input/textarea/textarea.scss
+++ b/lib/components/Input/textarea/textarea.scss
@@ -183,6 +183,7 @@
                 }
                 padding-top: var(--core-spacing-800);
                 .quill-textarea {
+                    max-height: calc(100% - var(--core-spacing-800));
                     font-size: var(
                         --semantic-typography-body-md-regular-default-fontSize
                     );
@@ -199,7 +200,7 @@
                     left: var(--core-size-800);
                 }
                 .right-icon {
-                    right: var(--core-size-500);
+                    right: var(--core-size-800);
                 }
             }
             &--sm {
@@ -211,10 +212,10 @@
                 &.no-right-icon {
                     padding-right: var(--core-spacing-400);
                 }
-                padding-top: var(--core-spacing-200);
 
                 .quill-textarea {
-                    padding-top: var(--core-spacing-200);
+                    max-height: calc(100% - var(--core-spacing-400));
+                    margin-block: var(--core-spacing-200);
                     font-size: var(
                         --semantic-typography-body-sm-regular-default-fontSize
                     );
@@ -225,13 +226,13 @@
 
                 .left-icon,
                 .right-icon {
-                    top: var(--core-spacing-400);
+                    top: var(--core-spacing-200);
                 }
                 .left-icon {
-                    left: var(--core-spacing-200);
+                    left: var(--core-spacing-400);
                 }
                 .right-icon {
-                    right: var(--core-spacing-200);
+                    right: var(--core-spacing-400);
                 }
             }
         }
@@ -239,7 +240,6 @@
         .quill-textarea {
             width: 100%;
             height: 100%;
-            max-height: 90%;
             border: none;
             outline: none;
             resize: none;
