fix: text align left always

--- a/lib/components/Input/textarea/textarea.scss
+++ b/lib/components/Input/textarea/textarea.scss
@@ -238,6 +238,7 @@
         }
 
         .quill-textarea {
+            text-align: left;
             width: 100%;
             height: 100%;
             border: none;
