fix: updated validation msg as object

--- a/lib/components/Input/password-field/password-field.scss
+++ b/lib/components/Input/password-field/password-field.scss
@@ -1,7 +1,10 @@
 .password_field {
 
-    DIV[data-lastpass-icon-root]  {
+    div[data-lastpass-icon-root]  {
        display: none !important;
+    }
+    &__eye-icon {
+        cursor: pointer;
     }
 
 }
