--- a/lib/components/Tag/custom-tag-stories.scss
+++ b/lib/components/Tag/custom-tag-stories.scss
@@ -1,14 +1,14 @@
 .custom-tag {
-    background: linear-gradient(90deg, var(--core-color-solid-blue-100), var(--core-color-solid-blue-300), var(--core-color-solid-blue-500));
     color: var(--core-color-solid-blue-1200);
     border: var(--core-borderWidth-75) solid var(--core-color-solid-blue-700);
 
     &-icon {
-        fill: var(--core-color-solid-blue-1200)
+        fill: var(--core-color-solid-blue-1200);
     }
 
     &-without-icon-outline {
-        border: var(--core-borderWidth-75) solid var(--core-color-solid-yellow-700);
+        border: var(--core-borderWidth-75) solid
+            var(--core-color-solid-yellow-700);
         color: var(--core-color-solid-yellow-1200);
     }
 }
