--- a/lib/components/ActionSheet/content/content.scss
+++ b/lib/components/ActionSheet/content/content.scss
@@ -1,4 +1,4 @@
-@import "@quill/breakpoints.scss";
+@import "@deriv-com/quill-tokens/dist/breakpoints.scss";
 
 .action-sheet--content {
     padding: var(--component-actionSheet-spacing-padding-md);
