--- a/lib/components/ActionSheet/handle-bar/handle-bar.scss
+++ b/lib/components/ActionSheet/handle-bar/handle-bar.scss
@@ -1,4 +1,4 @@
-@import "@quill/breakpoints.scss";
+@import "@deriv-com/quill-tokens/dist/breakpoints.scss";
 
 .quill-action-sheet--handle-bar {
     position: sticky;
