--- a/lib/components/Modal/modal.scss
+++ b/lib/components/Modal/modal.scss
@@ -1,5 +1,6 @@
-@import "@quill/breakpoints.scss";
-@import "@quill/static.scss";
+@import "@deriv-com/quill-tokens/dist/breakpoints.scss";
+@import "@styles/static.scss";
+
 .quill-modal {
     &__background {
         position: fixed;
