--- a/lib/components/ActionSheet/footer/footer.scss
+++ b/lib/components/ActionSheet/footer/footer.scss
@@ -1,4 +1,4 @@
-@import "@quill/breakpoints.scss";
+@import "@deriv-com/quill-tokens/dist/breakpoints.scss";
 
 .quill-action-sheet--footer {
     display: flex;
