fix: included quill.css in index.scss

--- a/lib/styles/index.scss
+++ b/lib/styles/index.scss
@@ -1,4 +1,7 @@
 /* Global Styles */
+@import "./reset.scss";
+@import "@deriv-com/quill-tokens/dist/quill.css";
+
 @at-root {
     @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
     @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
