nuzhy/QUILL-1781/import styles from quill-tokens (#229)
* fix: import styles from quill-tokens

* fix: update readme

* fix: included quill.css in index.scss

* fix: update breakpoint.scss import

--- a/lib/styles/index.scss
+++ b/lib/styles/index.scss
@@ -1,5 +1,6 @@
 /* Global Styles */
 @import "./reset.scss";
+@import "@deriv-com/quill-tokens/dist/quill.css";
 
 @at-root {
     @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
