chore: add test case for datepicker dropdown

--- a/lib/components/Input/date-picker/date-picker.scss
+++ b/lib/components/Input/date-picker/date-picker.scss
@@ -43,5 +43,9 @@
         &--close {
             transform: scaleY(0.5);
         }
+
+        &--center {
+            justify-content: center;
+        }
     }
 }
