--- a/lib/styles/static.scss
+++ b/lib/styles/static.scss
@@ -1,4 +1,4 @@
-:root { 
+:root {
     --temp-static-spacing-5: 5px;
     --temp-static-spacing-7: 7px;
     --temp-static-spacing-9: 9px;
@@ -10,4 +10,6 @@
     --temp-static-spacing-202: 202px;
     --temp-static-spacing-288: 288px;
     --temp-static-spacing-289: 289px;
+    --temp-static-spacing-312: 312px;
+    --temp-static-spacing-360: 360px;
 }
