--- a/lib/components/Atom/PasswordValidation/password-validation.scss
+++ b/lib/components/Atom/PasswordValidation/password-validation.scss
@@ -2,4 +2,17 @@
     display: flex;
     flex-direction: row;
     gap: var(--semantic-spacing-gap-md);
+   
+    &__status {
+
+        &--neutral {
+            color: var(--component-field-label-color-default);
+        }
+        &--success {
+            color: var(--component-field-label-color-success);
+        }
+        &--error {
+            color: var(--component-field-label-color-fail);
+        }
+    }
 }
