--- a/lib/components/Input/custom-dropdown/custom-dropdown.scss
+++ b/lib/components/Input/custom-dropdown/custom-dropdown.scss
@@ -1,8 +1,24 @@
-.custom-dropdown {
+.quill-custom-dropdown {
+    &__container {
+        &--true {
+            position: relative;
+            z-index: 9;
+        }
+    }
+
     &__input {
         & label {
             pointer-events: none;
             cursor: text;
+        }
+    }
+
+    &__content {
+        position: absolute;
+        width: 100%;
+
+        &--container {
+            position: relative;
         }
     }
 }
