Jia/QUILL-1808/custom content actionsheet (#276)
* feat: add custom content action sheet for dropdown

* feat: add action sheet dropdown for mobile

* feat: add actionsheet for custom dropdown

* chore: update storybook

* chore: update storybook

* chore: remove comments

---------

Co-authored-by: prince-deriv <prince@deriv.com>

--- a/lib/components/Input/custom-dropdown/custom-dropdown.scss
+++ b/lib/components/Input/custom-dropdown/custom-dropdown.scss
@@ -1,9 +1,13 @@
 .quill-custom-dropdown {
-    &__container {
+    &__is-open {
         &--true {
-            position: relative;
-            z-index: 9;
+            z-index: 100;
         }
+    }
+
+    &__container {
+        position: relative;
+        max-width: 360px;
     }
 
     &__input {
