--- a/lib/components/ActionSheet/footer/footer.scss
+++ b/lib/components/ActionSheet/footer/footer.scss
@@ -15,7 +15,7 @@
             flex-direction: column;
         }
         &--horizontal {
-            flex-direction: row;
+            flex-direction: row-reverse;
         }
     }
 }
