fix: adding tooltip to checkbox info icon

--- a/lib/components/SelectionControl/checkbox/checkbox-single/checkbox.scss
+++ b/lib/components/SelectionControl/checkbox/checkbox-single/checkbox.scss
@@ -69,6 +69,7 @@
     }
 
     &__info-icon {
+        display: flex;
         flex-shrink: 0;
         fill: var(--component-selectionControl-icon-default);
     }
